--- a/src/style.css
+++ b/src/style.css
@@ -141,28 +141,6 @@ body {
   fill: var(--text);
 }
 
-/* .bg-watermark {
-    position: absolute;
-    z-index: -1;
-    pointer-events: none; 
-    opacity: 0.08; 
-    
-
-    width: 500px; 
-    max-width: 80%;
-
-    bottom: 20%;
-    right: 0; 
-    left: 0; 
-    margin: 0 auto;
-}
-
-.bg-watermark svg {
-    width: 100%;
-    height: auto; 
-    display: block;
-}
-
 /* Mobile Fixes  */
 @media (max-width: 600px) {
   .bg-watermark {
@@ -336,11 +314,9 @@ input::placeholder {
 .primary-btn {
   background: var(--accent);
   color: #fff;
-  /* High contrast */
   border: none;
   flex: 1;
   height: 52px;
-  /* Taller touch target */
   border-radius: var(--radius);
   font-size: 1.1rem;
   font-weight: 500;
@@ -440,7 +416,6 @@ input::placeholder {
   overflow: hidden;
   margin: 1rem 0;
   border: none;
-  /* Cleaner look */
 }
 
 .progress-bar {
@@ -505,6 +480,10 @@ input::placeholder {
   border-top-color: var(--accent);
   animation: spin 1.2s cubic-bezier(0.4, 0.0, 0.2, 1) infinite;
 }
+@keyframes spin {
+  0% { rotate:0deg;}
+  100% {rotate:360deg;}
+}
 
 .icon-success,
 .icon-error {
@@ -514,7 +493,6 @@ input::placeholder {
   width: 100%;
   height: 100%;
   display: none;
-  /* Hidden by default */
   align-items: center;
   justify-content: center;
   font-size: 32px;
