--- a/src/style.css
+++ b/src/style.css
@@ -481,8 +481,8 @@ input::placeholder {
   animation: spin 1.2s cubic-bezier(0.4, 0.0, 0.2, 1) infinite;
 }
 @keyframes spin {
-  0% { rotate:0deg;}
-  100% {rotate:360deg;}
+  0% { transform:rotate(0deg);}
+  100% {transform:rotate(360deg);}
 }
 
 .icon-success,
